# hexchat-autoaway

./: .clang-format  CMakeLists.txt  README.md  autoaway_config.h.in  build.sh  clean.sh  plugin.def
src/: autoaway.c  hexchat-plugin.h  logging.c  logging.h  msg_buffer.c  msg_buffer.h  prefs.c  prefs.h  session-tracking.h  win32.c
src/dbus/: screensaver-dbus-client.c  screensaver-dbus-interface.xml  screensaver-dbus.c  screensaver-dbus.h
src/win32/: win32.c
